Edit text added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Pokemon Quiz</string>
+    <string name="question_right">Correct</string>
+    <string name="question_wrong">Wrong</string>
+    <string name="points">Points :</string>
+    <string name="play_again_text">PLAY AGAIN</string>
+    <string name="hint_pokemon_name">Enter the pokemon name</string>
+    <string name="bt_ok">OK</string>
 </resources>
